--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.20.7",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@react-navigation/stack": "^6.3.10",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
+    "@types/react-native-push-notification": "^8.1.1",
     "@types/styled-components-react-native": "^5.2.0",
     "axios": "^1.2.2",
     "eslint-plugin-import": "^2.26.0",
@@ -33,13 +35,17 @@
     "react-native": "0.70.6",
     "react-native-config": "^1.4.11",
     "react-native-flash-message": "^0.4.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-haptic-feedback": "^1.14.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-portalize": "^1.0.7",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
+    "react-native-sms": "^1.11.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^9.2.0",
     "reactotron-react-native": "^5.0.3",
